--- a/Java Phase 2 Programs/SimpleServletApp/src/main/webapp/index.html
+++ b/Java Phase 2 Programs/SimpleServletApp/src/main/webapp/index.html
@@ -9,5 +9,7 @@
 	<a href="Hi">Click Here</a>
 <br/>
 	<a href="login.html">Login Page</a>
+<br/>
+<a href="logindb.html">Login Using DB</a>
 </body>
 </html>
