--- a/Java Phase 2 Programs/SimpleServletApp/src/main/webapp/signup.html
+++ b/Java Phase 2 Programs/SimpleServletApp/src/main/webapp/signup.html
@@ -5,6 +5,19 @@
 <title>Insert title here</title>
 </head>
 <body>
+<h2>Account Create</h2>
+<form action="LoginDbServlet" method="post">
 
+		<label>EmailId</label>
+			<input type="email" name="emailid"/><br/>
+
+		<label>Password</label>
+		<input type="password" name="pass"/><br/>
+
+		<input type="submit" value="SignUp"/>
+		<input type="reset" value="reset"/>
+	
+</form>
+<a href="logindb.html">Login page</a>
 </body>
 </html>
