--- a/Phase 4/JavaScript using ES5/basicDOMOperation.html
+++ b/Phase 4/JavaScript using ES5/basicDOMOperation.html
@@ -11,19 +11,35 @@
             // var fname = document.getElementsByName("uname")[0].value;
             // var lname = document.getElementsByName("uname")[1].value;
             // alert("your name is "+fname+" "+lname);
-
+            //document.getElementsByName("fullname")[0].value=fname+" "+lname;
+            
             // read text field value using id attribute 
-            var fname = document.getElementById("u1").value;
-            var lname = document.getElementById("u2").value;
-            alert("Your name is "+fname+" "+lname); 
+           // var fname = document.getElementById("u1").value;
+            //var lname = document.getElementById("u2").value;
+            //alert("Your name is "+fname+" "+lname); 
+            // document.getElementById("n3").value=fname+" "+lname;
+            // document.getElementById("result").innerHTML=fname+" "+lname;
+            // document.getElementById("u1").value="";
+            // document.getElementById("u2").value="";
+            var h1TagValue = document.getElementsByTagName("h1")[0].innerHTML;
+            //alert(h1TagValue);
+            document.getElementsByTagName("h1")[1].innerHTML=h1TagValue
         }
     </script>
 </head>
 <body>
+    <h1>Welcome to html and javascript training</h1>
+    <h1>Hello</h1>
     <label>FName</label>
 <input type="text" name="uname" id="u1"/><br/>
     <label>LName</label>
 <input type="text" name="uname" id="u2"/><br/>
+    <label>FullName</label>
+<input type="text" name="fullname" id="n3" readonly/><br/>
+    <div id="result">
+
+    </div>
+
     <input type="button" value="Click Here" onclick="readData()"/>
 </body>
 </html>
