--- a/Phase 4/JavaScript using ES5/index.html
+++ b/Phase 4/JavaScript using ES5/index.html
@@ -6,9 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- <script src="demo.js"></script> -->
+    <link rel="stylesheet" href="styles.css">
     <script src="domOperation.js"></script>
+    
 </head>
 <body>
-    <input type="button" value="Add Data" onclick="addData()"/>
+    <label>Name</label><input type="text" id="uname"/><br/>
+    <label>Age</label><input type="text" id="age"/><br/>
+    <input type="button" value="Add Data" 
+    onclick="addData()"/>
+    <hr/>
+    <div id="result">
+
+    </div>
 </body>
 </html>
