--- a/Phase 4/JavaScript Using ES6/index.html
+++ b/Phase 4/JavaScript Using ES6/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- <script src="varletandconst.js"></script> -->
-    <script src="typesOfFunction.js"></script>
+    <!-- <script src="typesOfFunction.js"></script> -->
+    <script src="arrayObject.js"></script>
 </head>
 <body>
     
