--- a/Phase 4/JavaScript Using ES6/index.html
+++ b/Phase 4/JavaScript Using ES6/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
     <!-- <script src="varletandconst.js"></script> -->
     <!-- <script src="typesOfFunction.js"></script> -->
-    <script src="arrayObject.js"></script>
+    <!-- <script src="arrayObject.js"></script> -->
+    <script src="stringObject.js"></script>
 </head>
 <body>
     
