--- a/Phase 4/JavaScript Using ES6/index.html
+++ b/Phase 4/JavaScript Using ES6/index.html
@@ -8,7 +8,8 @@
     <!-- <script src="varletandconst.js"></script> -->
     <!-- <script src="typesOfFunction.js"></script> -->
     <!-- <script src="arrayObject.js"></script> -->
-    <script src="stringObject.js"></script>
+    <!-- <script src="stringObject.js"></script> -->
+    <script src="DateObject.js"></script>
 </head>
 <body>
     
