--- a/Phase 4/JavaScript Using ES6/index.html
+++ b/Phase 4/JavaScript Using ES6/index.html
@@ -9,7 +9,8 @@
     <!-- <script src="typesOfFunction.js"></script> -->
     <!-- <script src="arrayObject.js"></script> -->
     <!-- <script src="stringObject.js"></script> -->
-    <script src="DateObject.js"></script>
+    <!-- <script src="DateObject.js"></script> -->
+    <script src="MathObject.js"></script>
 </head>
 <body>
     <h2>Welcome to BavaScript</h2>
