--- a/Phase 4/JavaScript Using ES6/index.html
+++ b/Phase 4/JavaScript Using ES6/index.html
@@ -11,7 +11,8 @@
     <!-- <script src="stringObject.js"></script> -->
     <!-- <script src="DateObject.js"></script> -->
     <!-- <script src="MathObject.js"></script> -->
-    <script src="setObject.js"></script>
+    <!-- <script src="setObject.js"></script> -->
+    <script src="mapObject.js"></script>
 </head>
 <body>
     <h2>Welcome to BavaScript</h2>
