--- a/Phase 4/JavaScript Using ES6/index.html
+++ b/Phase 4/JavaScript Using ES6/index.html
@@ -12,9 +12,11 @@
     <!-- <script src="DateObject.js"></script> -->
     <!-- <script src="MathObject.js"></script> -->
     <!-- <script src="setObject.js"></script> -->
-    <script src="mapObject.js"></script>
+    <!-- <script src="mapObject.js"></script> -->
+    <!-- <script src="literalStyleObject.js"></script> -->
+    <script src="JSONDemo.js"></script>
 </head>
 <body>
-    <h2>Welcome to BavaScript</h2>
+   
 </body>
 </html>
