--- a/Phase 4/JavaScript Using ES6/index.html
+++ b/Phase 4/JavaScript Using ES6/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <!-- <script src="varletandconst.js"></script> -->
     <!-- <script src="typesOfFunction.js"></script> -->
-    <script src="arrayObject.js"></script>
+    <!-- <script src="arrayObject.js"></script> -->
     <!-- <script src="stringObject.js"></script> -->
     <!-- <script src="DateObject.js"></script> -->
     <!-- <script src="MathObject.js"></script> -->
@@ -15,6 +15,7 @@
     <!-- <script src="mapObject.js"></script> -->
     <!-- <script src="literalStyleObject.js"></script> -->
     <!-- <script src="JSONDemo.js"></script> -->
+    <script src="functionStyleObjectCreation.js"></script>
 </head>
 <body>
    
