--- a/Phase 4/JavaScript Using ES6/index.html
+++ b/Phase 4/JavaScript Using ES6/index.html
@@ -15,7 +15,8 @@
     <!-- <script src="mapObject.js"></script> -->
     <!-- <script src="literalStyleObject.js"></script> -->
     <!-- <script src="JSONDemo.js"></script> -->
-    <script src="functionStyleObjectCreation.js"></script>
+    <!-- <script src="functionStyleObjectCreation.js"></script> -->
+    <script src="ClassStyleObjectCreation.js"></script>
 </head>
 <body>
    
