--- a/Phase 4/JavaScript Using ES6/index.html
+++ b/Phase 4/JavaScript Using ES6/index.html
@@ -17,7 +17,8 @@
     <!-- <script src="JSONDemo.js"></script> -->
     <!-- <script src="functionStyleObjectCreation.js"></script> -->
     <!-- <script src="ClassStyleObjectCreation.js"></script> -->
-    <script src="SynAndAsynDemo.js"></script>
+    <!-- <script src="SynAndAsynDemo.js"></script> -->
+    <script src="promiseDemo.js"></script>
 </head>
 <body>
    
