--- a/Phase 5/Testing Programs/TestNGSampleExample/test-output/old/Default suite/classes.html
+++ b/Phase 5/Testing Programs/TestNGSampleExample/test-output/old/Default suite/classes.html
@@ -11,6 +11,18 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>mulTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>divTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>subTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>addTest</td>
 <td>&nbsp;</td></tr>
 <tr>
