--- a/Phase 5/Testing Programs/TestNGSampleExample/test-output/emailable-report.html
+++ b/Phase 5/Testing Programs/TestNGSampleExample/test-output/emailable-report.html
@@ -9,10 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">52</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">61</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.service.OperationTest</td><td><a href="#m0">addTest</a></td><td rowspan="1">1687854471325</td><td rowspan="1">12</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.service.OperationTest</td><td><a href="#m0">addTest</a></td><td rowspan="1">1687856178816</td><td rowspan="1">15</td></tr><tr class="passedeven"><td><a href="#m1">divTest</a></td><td rowspan="1">1687856178834</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m2">mulTest</a></td><td rowspan="1">1687856178838</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m3">subTest</a></td><td rowspan="1">1687856178839</td><td rowspan="1">1</td></tr></tbody>
 </table>
 <h2>Default test</h2><h3 id="m0">com.service.OperationTest#addTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.service.OperationTest#divTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.service.OperationTest#mulTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.service.OperationTest#subTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
