--- a/Phase 5/Testing Programs/TestNGSampleExample/test-output/old/Suite/methods-alphabetical.html
+++ b/Phase 5/Testing Programs/TestNGSampleExample/test-output/old/Suite/methods-alphabetical.html
@@ -1,18 +1,42 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9d9b6b">  <td>23/06/27 15:06:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OperationTest.addTest()[pri:0, instance:com.service.OperationTest@3059cbc]">addTest</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="9d9b6b">  <td>23/06/27 15:06:26</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OperationTest.divTest()[pri:0, instance:com.service.OperationTest@3059cbc]">divTest</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="b6aecc">  <td>23/06/27 15:06:26</td>   <td>-17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeServiceTest.getAllEmployeeTest()[pri:0, instance:com.service.EmployeeServiceTest@50ad3bc1]">getAllEmployeeTest</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="9d9b6b">  <td>23/06/27 15:06:26</td>   <td>4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OperationTest.mulTest()[pri:0, instance:com.service.OperationTest@3059cbc]">mulTest</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="b6aecc">  <td>23/06/27 15:06:26</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeServiceTest.searchEmployeeTest()[pri:0, instance:com.service.EmployeeServiceTest@50ad3bc1]">searchEmployeeTest</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="b6aecc">  <td>23/06/27 15:06:26</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeServiceTest.storeEmployeeTest()[pri:0, instance:com.service.EmployeeServiceTest@50ad3bc1]">storeEmployeeTest</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
-<tr bgcolor="9d9b6b">  <td>23/06/27 15:06:26</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OperationTest.subTest()[pri:0, instance:com.service.OperationTest@3059cbc]">subTest</td> 
-  <td>main@1646371921</td>   <td></td> </tr>
+<tr bgcolor="9d9b6b">  <td>23/06/27 16:08:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OperationTest.addTest()[pri:0, instance:com.service.OperationTest@581ac8a8]">addTest</td> 
+  <td>main@1583353301</td>   <td></td> </tr>
+<tr bgcolor="d8a07f">  <td>23/06/27 16:08:41</td>   <td>22</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNGHook.afterClass()[pri:0, instance:com.service.TestNGHook@a530d0a]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1583353301</td>   <td></td> </tr>
+<tr bgcolor="d8a07f">  <td>23/06/27 16:08:41</td>   <td>22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNGHook.afterMethod()[pri:0, instance:com.service.TestNGHook@a530d0a]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1583353301</td>   <td></td> </tr>
+<tr bgcolor="d8a07f">  <td>23/06/27 16:08:41</td>   <td>22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNGHook.afterMethod()[pri:0, instance:com.service.TestNGHook@a530d0a]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1583353301</td>   <td></td> </tr>
+<tr bgcolor="d8a07f">  <td>23/06/27 16:08:41</td>   <td>96</td> <td title="&lt;&lt;TestNGHook.afterSuite()[pri:0, instance:com.service.TestNGHook@a530d0a]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1583353301</td>   <td></td> </tr>
+<tr bgcolor="d8a07f">  <td>23/06/27 16:08:41</td>   <td>23</td> <td>&nbsp;</td><td title="&lt;&lt;TestNGHook.afterTest()[pri:0, instance:com.service.TestNGHook@a530d0a]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1583353301</td>   <td></td> </tr>
+<tr bgcolor="d8a07f">  <td>23/06/27 16:08:41</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNGHook.beforeClass()[pri:0, instance:com.service.TestNGHook@a530d0a]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1583353301</td>   <td></td> </tr>
+<tr bgcolor="d8a07f">  <td>23/06/27 16:08:41</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNGHook.beforeMethod()[pri:0, instance:com.service.TestNGHook@a530d0a]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1583353301</td>   <td></td> </tr>
+<tr bgcolor="d8a07f">  <td>23/06/27 16:08:41</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNGHook.beforeMethod()[pri:0, instance:com.service.TestNGHook@a530d0a]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1583353301</td>   <td></td> </tr>
+<tr bgcolor="d8a07f">  <td>23/06/27 16:08:40</td>   <td>-53</td> <td title="&gt;&gt;TestNGHook.beforeSuite()[pri:0, instance:com.service.TestNGHook@a530d0a]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1583353301</td>   <td></td> </tr>
+<tr bgcolor="d8a07f">  <td>23/06/27 16:08:40</td>   <td>-47</td> <td>&nbsp;</td><td title="&gt;&gt;TestNGHook.beforeTest()[pri:0, instance:com.service.TestNGHook@a530d0a]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1583353301</td>   <td></td> </tr>
+<tr bgcolor="9d9b6b">  <td>23/06/27 16:08:41</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OperationTest.divTest()[pri:0, instance:com.service.OperationTest@581ac8a8]">divTest</td> 
+  <td>main@1583353301</td>   <td></td> </tr>
+<tr bgcolor="b6aecc">  <td>23/06/27 16:08:41</td>   <td>-21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeServiceTest.getAllEmployeeTest()[pri:0, instance:com.service.EmployeeServiceTest@2b48a640]">getAllEmployeeTest</td> 
+  <td>main@1583353301</td>   <td></td> </tr>
+<tr bgcolor="9d9b6b">  <td>23/06/27 16:08:41</td>   <td>7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OperationTest.mulTest()[pri:0, instance:com.service.OperationTest@581ac8a8]">mulTest</td> 
+  <td>main@1583353301</td>   <td></td> </tr>
+<tr bgcolor="b6aecc">  <td>23/06/27 16:08:41</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeServiceTest.searchEmployeeTest()[pri:0, instance:com.service.EmployeeServiceTest@2b48a640]">searchEmployeeTest</td> 
+  <td>main@1583353301</td>   <td></td> </tr>
+<tr bgcolor="b6aecc">  <td>23/06/27 16:08:41</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeServiceTest.storeEmployeeTest()[pri:0, instance:com.service.EmployeeServiceTest@2b48a640]">storeEmployeeTest</td> 
+  <td>main@1583353301</td>   <td></td> </tr>
+<tr bgcolor="9d9b6b">  <td>23/06/27 16:08:41</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OperationTest.subTest()[pri:0, instance:com.service.OperationTest@581ac8a8]">subTest</td> 
+  <td>main@1583353301</td>   <td></td> </tr>
+<tr bgcolor="d8a07f">  <td>23/06/27 16:08:41</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGHook.test1()[pri:0, instance:com.service.TestNGHook@a530d0a]">test1</td> 
+  <td>main@1583353301</td>   <td></td> </tr>
+<tr bgcolor="d8a07f">  <td>23/06/27 16:08:41</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGHook.test2()[pri:0, instance:com.service.TestNGHook@a530d0a]">test2</td> 
+  <td>main@1583353301</td>   <td></td> </tr>
 </table>
