--- a/Phase 5/Testing Programs/TestNGSampleExample/test-output/old/Suite/groups.html
+++ b/Phase 5/Testing Programs/TestNGSampleExample/test-output/old/Suite/groups.html
@@ -1,1 +1,3 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>speed</td><td>BikeTest.speedTest()[pri:0, instance:com.service.BikeTest@57af006c]<br/>CarTest.speedTest()[pri:0, instance:com.service.CarTest@ea6147e]<br/></td></tr>
+</table>
