--- a/Phase 5/Testing Programs/TestNGSampleExample/test-output/old/Suite/methods-not-run.html
+++ b/Phase 5/Testing Programs/TestNGSampleExample/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,6 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.service.BikeTest.mailageTest</td></tr>
+<tr><td>com.service.CarTest.mailageTest</td></tr>
+<tr><td>com.service.BikeTest.wheelCodingTest</td></tr>
+<tr><td>com.service.CarTest.wheelCodingTest</td></tr>
 </table>
