--- a/Phase 5/Testing Programs/TestNGSampleExample/test-output/emailable-report.html
+++ b/Phase 5/Testing Programs/TestNGSampleExample/test-output/emailable-report.html
@@ -9,18 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">9</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">72</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">39</td><td>speed</td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.service.EmployeeServiceTest</td><td><a href="#m0">getAllEmployeeTest</a></td><td rowspan="1">1687862321025</td><td rowspan="1">9</td></tr><tr class="passedeven"><td><a href="#m1">searchEmployeeTest</a></td><td rowspan="1">1687862321039</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m2">storeEmployeeTest</a></td><td rowspan="1">1687862321042</td><td rowspan="1">1</td></tr><tr class="passedodd"><td rowspan="4">com.service.OperationTest</td><td><a href="#m3">addTest</a></td><td rowspan="1">1687862321046</td><td rowspan="1">2</td></tr><tr class="passedodd"><td><a href="#m4">divTest</a></td><td rowspan="1">1687862321049</td><td rowspan="1">2</td></tr><tr class="passedodd"><td><a href="#m5">mulTest</a></td><td rowspan="1">1687862321053</td><td rowspan="1">0</td></tr><tr class="passedodd"><td><a href="#m6">subTest</a></td><td rowspan="1">1687862321054</td><td rowspan="1">1</td></tr><tr class="passedeven"><td rowspan="2">com.service.TestNGHook</td><td><a href="#m7">test1</a></td><td rowspan="1">1687862321060</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m8">test2</a></td><td rowspan="1">1687862321064</td><td rowspan="1">2</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.service.BikeTest</td><td><a href="#m0">speedTest</a></td><td rowspan="1">1687863726324</td><td rowspan="1">5</td></tr><tr class="passedodd"><td rowspan="1">com.service.CarTest</td><td><a href="#m1">speedTest</a></td><td rowspan="1">1687863726332</td><td rowspan="1">1</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">com.service.EmployeeServiceTest#getAllEmployeeTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.service.EmployeeServiceTest#searchEmployeeTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.service.EmployeeServiceTest#storeEmployeeTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.service.OperationTest#addTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.service.OperationTest#divTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">com.service.OperationTest#mulTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">com.service.OperationTest#subTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">com.service.TestNGHook#test1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">com.service.TestNGHook#test2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">com.service.BikeTest#speedTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.service.CarTest#speedTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
