--- a/Phase 5/Testing Programs/TestNGSampleExample/test-output/old/Default suite/methods.html
+++ b/Phase 5/Testing Programs/TestNGSampleExample/test-output/old/Default suite/methods.html
@@ -1,28 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b4c3a9">  <td>23/06/27 16:07:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNGHook.beforeClass()[pri:0, instance:com.service.TestNGHook@611889f4]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1297502382</td>   <td></td> </tr>
-<tr bgcolor="b4c3a9">  <td>23/06/27 16:07:06</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNGHook.afterClass()[pri:0, instance:com.service.TestNGHook@611889f4]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1297502382</td>   <td></td> </tr>
-<tr bgcolor="b4c3a9">  <td>23/06/27 16:07:06</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNGHook.beforeMethod()[pri:0, instance:com.service.TestNGHook@611889f4]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1297502382</td>   <td></td> </tr>
-<tr bgcolor="b4c3a9">  <td>23/06/27 16:07:06</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGHook.test2()[pri:0, instance:com.service.TestNGHook@611889f4]">test2</td> 
-  <td>main@1297502382</td>   <td></td> </tr>
-<tr bgcolor="b4c3a9">  <td>23/06/27 16:07:06</td>   <td>-17</td> <td>&nbsp;</td><td title="&gt;&gt;TestNGHook.beforeTest()[pri:0, instance:com.service.TestNGHook@611889f4]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1297502382</td>   <td></td> </tr>
-<tr bgcolor="b4c3a9">  <td>23/06/27 16:07:06</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGHook.test1()[pri:0, instance:com.service.TestNGHook@611889f4]">test1</td> 
-  <td>main@1297502382</td>   <td></td> </tr>
-<tr bgcolor="b4c3a9">  <td>23/06/27 16:07:06</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNGHook.beforeMethod()[pri:0, instance:com.service.TestNGHook@611889f4]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1297502382</td>   <td></td> </tr>
-<tr bgcolor="b4c3a9">  <td>23/06/27 16:07:06</td>   <td>22</td> <td>&nbsp;</td><td title="&lt;&lt;TestNGHook.afterTest()[pri:0, instance:com.service.TestNGHook@611889f4]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1297502382</td>   <td></td> </tr>
-<tr bgcolor="b4c3a9">  <td>23/06/27 16:07:06</td>   <td>73</td> <td title="&lt;&lt;TestNGHook.afterSuite()[pri:0, instance:com.service.TestNGHook@611889f4]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1297502382</td>   <td></td> </tr>
-<tr bgcolor="b4c3a9">  <td>23/06/27 16:07:06</td>   <td>-24</td> <td title="&gt;&gt;TestNGHook.beforeSuite()[pri:0, instance:com.service.TestNGHook@611889f4]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1297502382</td>   <td></td> </tr>
-<tr bgcolor="b4c3a9">  <td>23/06/27 16:07:06</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNGHook.afterMethod()[pri:0, instance:com.service.TestNGHook@611889f4]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1297502382</td>   <td></td> </tr>
-<tr bgcolor="b4c3a9">  <td>23/06/27 16:07:06</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNGHook.afterMethod()[pri:0, instance:com.service.TestNGHook@611889f4]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1297502382</td>   <td></td> </tr>
+<tr bgcolor="b4c3a9">  <td>23/06/27 16:28:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BikeTest.speedTest()[pri:0, instance:com.service.BikeTest@69997e9d]">speedTest</td> 
+  <td>main@417301556</td>   <td></td> </tr>
+<tr bgcolor="b4c3a9">  <td>23/06/27 16:28:47</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BikeTest.mailageTest()[pri:0, instance:com.service.BikeTest@69997e9d]">mailageTest</td> 
+  <td>main@417301556</td>   <td></td> </tr>
+<tr bgcolor="b4c3a9">  <td>23/06/27 16:28:47</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BikeTest.wheelCodingTest()[pri:0, instance:com.service.BikeTest@69997e9d]">wheelCodingTest</td> 
+  <td>main@417301556</td>   <td></td> </tr>
 </table>
