--- a/Phase 5/Selenium Programs/Web pages/index.html
+++ b/Phase 5/Selenium Programs/Web pages/index.html
@@ -6,5 +6,12 @@
 </head>
 <body>
 <h2>Welcome to Simple Selenium Testing </h2>
+<p>This is p tag</p>
+<b>This is b tag</b>
+<div> This is div tag</div>
+<div id="d1">This tag has id with value as id1</div>
+<p>This is second paragraph tag</p>
+<p>This is third paragraph tag</p>
+<p>This is fourth paragraph tag</p>
 </body>
 </html>
