--- a/Phase 5/Selenium Programs/SeleniumWithTestNGWithSimpleWebPage/test-output/old/Default suite/classes.html
+++ b/Phase 5/Selenium Programs/SeleniumWithTestNGWithSimpleWebPage/test-output/old/Default suite/classes.html
@@ -11,7 +11,19 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>indexPageTest</td>
+<td>emptyEmailidField</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>emptyPasswordField</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>loginPageFailure</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>loginPageSuccess</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
