--- a/Phase 5/Selenium Programs/SeleniumWithTestNGWithSimpleWebPage/test-output/old/Default suite/methods-not-run.html
+++ b/Phase 5/Selenium Programs/SeleniumWithTestNGWithSimpleWebPage/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,5 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.test.LoginTest.emptyPasswordField</td></tr>
+<tr><td>com.test.LoginTest.loginPageSuccess</td></tr>
+<tr><td>com.test.LoginTest.loginPageFailure</td></tr>
 </table>
