--- a/Phase 5/Selenium Programs/SeleniumWithTestNGWithSimpleWebPage/test-output/index.html
+++ b/Phase 5/Selenium Programs/SeleniumWithTestNGWithSimpleWebPage/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\akash\AppData\Local\Temp\testng-eclipse-665030466\testng-customsuite.xml</span>
+                    <span>C:\Users\akash\AppData\Local\Temp\testng-eclipse-1115094227\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.test.LoginTest" class="method navigator-link" hash-for-method="indexPageTest">indexPageTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.test.LoginTest" class="method navigator-link" hash-for-method="emptyEmailidField">emptyEmailidField</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -127,9 +127,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="indexPageTest">
-                  </a> <!-- indexPageTest -->
-                  <span class="method-name">indexPageTest</span>
+                  <a name="emptyEmailidField">
+                  </a> <!-- emptyEmailidField -->
+                  <span class="method-name">emptyEmailidField</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\akash\AppData\Local\Temp\testng-eclipse-665030466\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\akash\AppData\Local\Temp\testng-eclipse-1115094227\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,11 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.test.LoginTest&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;indexPageTest&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- com.test.LoginTest --&gt;
+      &lt;class name=&quot;com.test.LoginTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -192,14 +188,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'indexPageTest')
+data.setCell(0, 1, 'emptyEmailidField')
 data.setCell(0, 2, 'com.test.LoginTest')
-data.setCell(0, 3, 686);
+data.setCell(0, 3, 111);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 686 ms</span>
+              <span class="suite-total-time">Total running time: 111 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -214,9 +210,20 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">3 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.test.LoginTest</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">emptyPasswordField</span>
+                <br/>
+                <span class="ignored-method-name">loginPageSuccess</span>
+                <br/>
+                <span class="ignored-method-name">loginPageFailure</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -231,12 +238,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">indexPageTest</span>
-                <span class="method-start">2668 ms</span>
+                <span class="method-name">emptyEmailidField</span>
+                <span class="method-start">1604 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">afterTest</span>
-                <span class="method-start">3360 ms</span>
+                <span class="method-start">1718 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
