--- a/Phase 5/Selenium Programs/SeleniumWithTestNGWithSimpleWebPage/test-output/old/Default suite/classes.html
+++ b/Phase 5/Selenium Programs/SeleniumWithTestNGWithSimpleWebPage/test-output/old/Default suite/classes.html
@@ -4,26 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.test.LoginTest</td>
+<td>com.test.GooglePageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>emptyEmailidField</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>emptyPasswordField</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>loginPageFailure</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>loginPageSuccess</td>
+<td>googlePageTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
