--- a/Phase 5/Selenium Programs/SeleniumWithTestNGWithSimpleWebPage/test-output/old/Default suite/methods-alphabetical.html
+++ b/Phase 5/Selenium Programs/SeleniumWithTestNGWithSimpleWebPage/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="85ff7e">  <td>23/06/29 14:40:13</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterTest()[pri:0, instance:com.test.LoginTest@942a29c]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@764419760</td>   <td></td> </tr>
-<tr bgcolor="85ff7e">  <td>23/06/29 14:40:11</td>   <td>-1714</td> <td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeTest()[pri:0, instance:com.test.LoginTest@942a29c]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@764419760</td>   <td></td> </tr>
-<tr bgcolor="85ff7e">  <td>23/06/29 14:40:12</td>   <td>-114</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.emptyEmailidField()[pri:0, instance:com.test.LoginTest@942a29c]">emptyEmailidField</td> 
-  <td>main@764419760</td>   <td></td> </tr>
+<tr bgcolor="8aa092">  <td>23/06/29 15:20:22</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;GooglePageTest.afterTest()[pri:0, instance:com.test.GooglePageTest@4f80542f]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@225672073</td>   <td></td> </tr>
+<tr bgcolor="8aa092">  <td>23/06/29 15:20:14</td>   <td>-8213</td> <td>&nbsp;</td><td title="&gt;&gt;GooglePageTest.beforeTest()[pri:0, instance:com.test.GooglePageTest@4f80542f]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@225672073</td>   <td></td> </tr>
+<tr bgcolor="8aa092">  <td>23/06/29 15:20:16</td>   <td>-6604</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GooglePageTest.googlePageTest()[pri:0, instance:com.test.GooglePageTest@4f80542f]">googlePageTest</td> 
+  <td>main@225672073</td>   <td></td> </tr>
 </table>
